CHAPTER-02/ingress/web-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a-deployment
spec:
  selector:
    matchLabels:
      app: web-a
  replicas: 1
  template:
    metadata:
      labels:
        app: web-a
    spec:
      containers:
      - name: web-a
        image: cormachogan/ingress-demo-a:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-a
  name: web-a
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web-a
  sessionAffinity: None
  type: ClusterIP
