CHAPTER-02/ingress/web-b-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-b-deployment
spec:
  selector:
    matchLabels:
      app: web-b
  replicas: 1
  template:
    metadata:
      labels:
        app: web-b
    spec:
      containers:
      - name: web-b
        image: cormachogan/ingress-demo-b:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-b
  name: web-b
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web-b
  sessionAffinity: None
  type: ClusterIP
